@@ -38,6 +38,8 @@
 
 	<LI><A HREF="#PDF">The PDF Tab</A>
 
+	<LI><A HREF="#SECURITY">The Security Tab</A>
+
 	<LI><A HREF="#OPTIONS">The Options Tab</A>
 
 </UL>
@@ -483,6 +485,45 @@ to adjust the number of seconds.
 The <VAR>Effect Duration</VAR> slider controls the number of seconds
 that the page effect will last when changing pages. Drag the slider to
 adjust the number of seconds.
+
+<HR>
+
+<P><A NAME="SECURITY"><A HREF="#CONTENTS">Contents</A> |
+<A HREF="#LOADSAVE">Loading and Saving Books</A></A>
+
+<H1>The Security Tab</H1>
+
+<P>The security tab allows you to enable PDF document encryption
+and security features.
+
+<H2>Encryption</H2>
+
+<P>The <VAR>Encryption</VAR> buttons control whether or not encryption is
+performed on the PDF file. Encrypted documents can be password protected and
+also provide user permissions.
+
+<H2>Permissions</H2>
+
+<P>The <VAR>Permissions</VAR> buttons control what operations are allowed by
+the PDF viewer.
+
+<H2>Owner Password</H2>
+
+<P>The <VAR>Owner Password</VAR> field contains the document owner password,
+a string that is used by Adobe Acrobat to control who can change document
+permissions, etc.
+
+<P>If this field is left blank, a random 32-character password is generated
+so that noone can change the document using the Adobe tools.
+
+<H2>User Password</H2>
+
+<P>The <VAR>User Password</VAR> field contains the document user password,
+a string that is used by Adobe Acrobat to restrict viewing permissions on
+the file.
+
+<P>If this field is left blank, any user may view the document without entering
+a password.
 
 <HR>
 
