@@ -2,20 +2,20 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2000, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20000415">
-	<TITLE>HTMLDOC 1.8.7 Software Users Manual</TITLE>
+	<META NAME="docnumber" CONTENT="ESP-003-20000605">
+	<TITLE>HTMLDOC 1.8.8 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
 
 <H1 ALIGN="RIGHT"><A NAME="INTRO">Introduction</A></H1>
 
 This document describes how to use the <I>HTMLDOC</I> software, version
-1.8.7.  <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
+1.8.8.  <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
 files into indexed HTML, Adobe&reg; PostScript&reg;, or Adobe Portable
 Document Format ("PDF") files. 
 
 <P><I>HTMLDOC</I> supports most HTML 3.2 elements, some HTML 4.0
-elements, and can generate a title page and table of contents pages.
+elements, and can generate title and table of contents pages.
 
 <P><I>HTMLDOC</I> can be used as a standalone application, in a batch
 document processing environment, or as a web-based report generation
